--- a/src/components/TurnsDisplay/TurnsDisplay.css
+++ b/src/components/TurnsDisplay/TurnsDisplay.css
@@ -1,6 +1,6 @@
 .turn {
   display: flex;
-  justify-content: center;
   margin-top: 20px;
   margin-bottom: 20px;
+  justify-content: space-evenly;
 }
